--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
-APP_URL=http://localhost
+APP_URL=https://domomatcontacts.herokuapp.com/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -25,6 +25,6 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-GOOGLE_ID=
-GOOGLE_SECRET=
-GOOGLE_REDIRECT=
+GOOGLE_ID=1433029834-u2o8vqeuluhkg375l04143ifs038d3hh.apps.googleusercontent.com
+GOOGLE_SECRET=dILsBfzJXk7Zu-T_PH2STPC1
+GOOGLE_REDIRECT=https://domomatcontacts.herokuapp.com/
