--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
-APP_KEY=SomeRandomStrinf
+APP_KEY=SomeRandomString
 APP_URL=https://domomatcontacts.herokuapp.com/
 
 DB_CONNECTION=mysql
