--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=production
 APP_DEBUG=true
 APP_KEY=SomeRandomStringSomeRandomString
-APP_URL=https://domomatcontacts.herokuapp.com/
+APP_URL=http://domomatcontacts.herokuapp.com/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -27,4 +27,4 @@ MAIL_ENCRYPTION=null
 
 GOOGLE_ID=1433029834-u2o8vqeuluhkg375l04143ifs038d3hh.apps.googleusercontent.com
 GOOGLE_SECRET=dILsBfzJXk7Zu-T_PH2STPC1
-GOOGLE_REDIRECT=https://domomatcontacts.herokuapp.com/
+GOOGLE_REDIRECT=http://domomatcontacts.herokuapp.com/
