--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ MAIL_ENCRYPTION=null
 
 GOOGLE_ID=1433029834-u2o8vqeuluhkg375l04143ifs038d3hh.apps.googleusercontent.com
 GOOGLE_SECRET=dILsBfzJXk7Zu-T_PH2STPC1
-GOOGLE_REDIRECT=http://domomatcontacts.herokuapp.com/
+GOOGLE_REDIRECT=http://domomatcontacts.herokuapp.com/oauth2callback
